--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             <div class=firstHalf>
                 <h1 class=text-big id=web>Food Order</h1>
                 <p class=text-small>
-                    Order Food in Anywhere from Listed Places .
+                    Order Food in Anywhere from Listed Places $(hostname).
                 </p>
  
  
